Resuelto bug de slick overflow

--- a/src/css/partials/c-header.css
+++ b/src/css/partials/c-header.css
@@ -42,6 +42,6 @@
 
 @media screen and (max-width: 576px) {
   .c-header .navbar {
-    padding-right: 3rem;
+    /* padding-right: 3rem; */
   }
 }
