--- a/src/css/partials/c-img-text.css
+++ b/src/css/partials/c-img-text.css
@@ -15,6 +15,7 @@
   }
   .c-img-text-horiz img {
     margin: 0 auto 1rem;
+    max-width: 90vw;
   }
   .c-img-text-horiz--left .row {
     flex-direction: column-reverse;
